--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="list_photo">list photo</string>
     <string name="search_list_photo">search list photo</string>
     <string name="search_title">search</string>
+    <string name="dont_find_photos">Don\'t find photos</string>
     <string name="toast_for_search">Put arguments on separate lines</string>
 </resources>
